--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% if "инженер" in prof %}
-        <h2>Тренажеры для инженеров</h2>
-        <img src="{{ url_for('static', filename='images/ing.png') }}">
-  {% elif "строитель" in prof %}
-        <h2>Тренажеры для строитлей</h2>
-        <img src="{{ url_for('static', filename='images/ing.png') }}">
- {% else %}
-        <h2>Научные симуляторы</h2>
-        <img src="{{ url_for('static', filename='images/sci.png') }}">
- {% endif %}
+<h1>Работы</h1>
+{% for item in jobs%}
+<div class="col-md6 border rounded">
+    <h2>{{item.job}}</h2>
+    <div>
+        Ответственные за эту фигню - {{item.collaborators}}
+    </div>
+    <div>
+        id рабовладельца - {{item.team_leader}}, Начать в - {{item.start_date.date()}}
+    </div>
+</div>
+{% endfor %}
+{% if current_user.is_authenticated %}
+    <a href="news" class="btn btn-secondary">Добавить новость</a>
+{% endif %}
 {% endblock %}
